Styles fix after changing section class

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -203,7 +203,7 @@ html {
       }
       &:hover {
         text-decoration: underline;
-        &.footer__link {
+        &.l-footer__link {
           text-decoration: none;
           span {
             text-decoration: underline;
